# lxi-zephyr-demo

./: .gitmodules  CMakeLists.txt  README.md  sections-rom.ld
.github/workflows/: docs.yml  release.yml
app/: CMakeLists.txt  debug.conf  prj.conf
app/boards/: nucleo_f429zi.overlay
app/include/: gpio_control.h  http_server.h  scpi_commands.h  service.h  tcp_server.h  webpage.h
app/src/: gpio_control.c  http_server.c  main.c  scpi_commands.c  service.c  tcp_server.c  webpage.c
lib/: CMakeLists.txt
tests/app/scpi/: CMakeLists.txt  testcase.yaml
tests/app/scpi/src/: main.c
webpage/: index.html
